[package]
name = "approval-flow-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = {git = "ssh://git@github.com/evanzp0/log4rs.git"}
xml-doc = { git = "ssh://git@github.com/evanzp0/xml-doc-log4rs.git" }
rstring-builder = "0.1.4"
int-enum = "0.4"
serde_yaml = "0.8"
once_cell = "1.13"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "macros"] }
actix-web = "4"
eyre = "0.6"
color-eyre = "0.5"
config = "0.13"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
#serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-log = {version = "0.1", features = ["env_logger"]}
uuid = {version = "1.0.0", features = ["serde", "v4"]}
chrono = {version = "0.4.21", features = ["serde"]}
validator = { version = "0.14", features = ["derive"] }
jsonwebtoken = "8.0"
argonautica = { version = "0.2", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }
actix-web-httpauth = "0.6"
tera = "1"
Boa = "0.13"
actix-files = "0.6"
actix-session = { version = "0.6", features = ["redis-actor-session"] }
serde-xml-rs = "0.5"

[dev-dependencies]
lazy_static = "1.4.0"
actix-rt = "*"