[package]
name = "approval-flow-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = {git = "ssh://git@github.com/evanzp0/log4rs.git"}
xml-doc = { git = "ssh://git@github.com/evanzp0/xml-doc-log4rs.git" }
rstring-builder = "0.1.4"
int-enum = "0.4"
serde_yaml = "0.8"
once_cell = "1.13"
eyre = "0.6"
color-eyre = "0.5"
serde = "1.0"
serde_json = "1.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}
chrono = {version = "0.4.21", features = ["serde"]}
validator = { version = "0.14", features = ["derive"] }
futures = { version = "0.3", features = ["compat"] }
Boa = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono"] }

[dev-dependencies]
