[package]
name = "ractiviti-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
log = "0.4"
log4rs = "1.1"
log4rs-macros = "1.1"
xml-doc-log4rs = "0.2"
int-enum = "0.4"
serde_yaml = "0.8"
once_cell = "1.13"
eyre = "0.6"
color-eyre = "0.5"
serde = "1.0"
serde_json = "1.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}
chrono = {version = "0.4.21", features = ["serde"]}
validator = { version = "0.14", features = ["derive"] }
futures = { version = "0.3", features = ["compat"] }
Boa = "0.13"
deadpool-postgres = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[dev-dependencies]
